app/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-frontend
  namespace: sre-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sre-frontend
  template:
    metadata:
      labels:
        app: sre-frontend
    spec:
      containers:
        - name: frontend
          image: kotidevops/kt-frontend:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sre-platform
spec:
  selector:
    app: sre-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-platform-ingress
  namespace: sre-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: sre.ktech.local  # Update this to your real domain or EKS NLB hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
